syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "stations/station_identification.proto";

message station_full {
    google.protobuf.Timestamp time_stamp = 1;
    station_identification station = 2;
    int32 max_capacity = 3;
}