syntax = "proto3";

import "./station.proto"

message station_capacity_increased {
    google.protobuf.Timestamp time_stamp = 1;
    Station station = 2;
    int32 amount_increased = 3;
    int32 current_available_capacity = 4;
    int32 max_capacity = 5;
}